--- a/app/local.properties
+++ b/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 14 18:13:39 PST 2018
-sdk.dir=C\:\\Android\\SDK
+#Sat Jan 20 21:01:56 PST 2018
+sdk.dir=C\:\\Users\\Alan\\AppData\\Local\\Android\\Sdk
